--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Dicee</title>
     <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>Hello</h1>
-    <a href="www.google.com">Google</a>
-<input class="check" type=checkbox>
-<button class="btn">Hey</button>
-<ul>
-  <li class="item">
-    <a class="link" href="www.google.com">Google</a>
-  </li>
-  <li class="item">second</li>
-  <li class="item">third</li>
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
-</ul>
-<script src="app.js"></script>
-</body>
+  </head>
+  <body>
+
+    <div class="container">
+      <h1>Roll the dice</h1>
+
+      <div class="dice">
+        <p>Player 1 <span class="span1"> Wins🏆</span> </p>
+        <img class="img1" src="">
+      </div>
+
+      <div class="dice">
+        <p>Player 2 <span class="span2"> Wins🏆</span></p>
+        <img class="img2" src="">
+      </div>
+      <div class="btn">
+        <button  onclick="refreshPage()">Roll</button>
+      </div>
+    </div>
+    <script src="app.js"></script>
+  </body>
+
+  <footer>
+    With ❤️ Harshith
+  </footer>
 </html>
